--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "poker-hands",
   "version": "0.1.0",
+  "engines": {
+    "node": "15.4.0"
+  },
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
@@ -12,7 +15,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "semantic-ui-css": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
